# rotate-that-batch

./: LICENSE  README.md  errorlog  pyproject.toml  rotate.py
.github/workflows/: ci.yaml
src/rotate_that_batch/: cli.py  config.py  logger.py  main.py  video_utils.py
tests/: test_main.py  tests_main.py
