[tool.poetry]
name = "rotate-that-batch"
version = "0.1.0"
description = "When your videos are sideways, it's time to 'Rotate That Batch'."
authors = ["Kevin N. Murphy <knmurphy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rotate_that_batch", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.27.0"
rich = "^13.3.5"
typer = "^0.9.0"
pyexiftool = "^0.5.5"  # Add this line for ExifTool support

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest-asyncio = "^0.21.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
rotate-that-batch = "rotate_that_batch.main:app"
rotate-that-batch = "rotate_that_batch.main:app"
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_mode = "auto"
[tool.coverage.run]
source = ["src"]
source = ["src"]
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]
